// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IonSkeleton should render default skeleton 1`] = `
.c0 {
  display: block;
  position: relative;
  overflow: hidden;
  background-color: #fcfcfd;
}

.c0::after {
  content: '';
  position: absolute;
  inset: 0;
  transform: translateX(-100%);
  background: linear-gradient(         90deg,         rgba(246, 247, 248, 0.2) 0%,         rgba(155, 160, 177, 0.2) 48.52%,         rgba(246, 247, 248, 0.2) 100%       );
  animation: cLHmAQ 1.5s infinite ease-in-out;
}

<span
  class="c0"
  style="width: 100px; height: 100px; border-radius: 0px;"
/>
`;

exports[`IonSkeleton should render skeleton with correct unit when width and height are numbers 1`] = `
.c0 {
  display: block;
  position: relative;
  overflow: hidden;
  background-color: #fcfcfd;
}

.c0::after {
  content: '';
  position: absolute;
  inset: 0;
  transform: translateX(-100%);
  background: linear-gradient(         90deg,         rgba(246, 247, 248, 0.2) 0%,         rgba(155, 160, 177, 0.2) 48.52%,         rgba(246, 247, 248, 0.2) 100%       );
  animation: cLHmAQ 1.5s infinite ease-in-out;
}

<span
  class="c0"
  style="width: 200px; height: 200px; border-radius: 50px;"
/>
`;

exports[`IonSkeleton should render skeleton with correct unit when width and height are strings 1`] = `
.c0 {
  display: block;
  position: relative;
  overflow: hidden;
  background-color: #fcfcfd;
}

.c0::after {
  content: '';
  position: absolute;
  inset: 0;
  transform: translateX(-100%);
  background: linear-gradient(         90deg,         rgba(246, 247, 248, 0.2) 0%,         rgba(155, 160, 177, 0.2) 48.52%,         rgba(246, 247, 248, 0.2) 100%       );
  animation: cLHmAQ 1.5s infinite ease-in-out;
}

<span
  class="c0"
  style="width: 20rem; height: 200px; border-radius: 50%;"
/>
`;
